--- a/views/login.jade
+++ b/views/login.jade
@@ -15,7 +15,7 @@ block content
       form(action='/login', method='post')
         .form-group
           label Email
-          input.form-control(type='text', name='username')
+          input.form-control(type='text', name='email')
         .form-group
           label Password
           input.form-control(type='password', name='password')
