--- a/views/login.jade
+++ b/views/login.jade
@@ -7,10 +7,8 @@ block content
       h1
         span.fa.fa-sign-in
         | Login
-      // show any messages that come back with authentication
-      //| <% if (message.length > 0) { %>
-      //.alert.alert-danger <%= message %>
-      //| <% } %>
+      if message.length > 0
+        .alert.alert-danger= message
       // LOGIN FORM
       form(action='/login', method='post')
         .form-group
