validation error handling validation errors throw Hapi bad request error that is caught by onPreResponse lifecycle callback, which renders the referring path (via route/view name convention) and delivers error message and recalls submitted email.

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -14,7 +14,7 @@ block content
       form(action='/signup', method='post')
         .form-group
           label Email
-          input.form-control(type='text', name='email')
+          input.form-control(type='text', name='email', value="#{ email || '' }")
         .form-group
           label Password
           input.form-control(type='password', name='password')
