--- a/views/login.jade
+++ b/views/login.jade
@@ -13,7 +13,7 @@ block content
       form(action='/login', method='post')
         .form-group
           label Email
-          input.form-control(type='text', name='email')
+          input.form-control(type='text', name='email', value="#{ email || '' }")
         .form-group
           label Password
           input.form-control(type='password', name='password')
